--- a/.env
+++ b/.env
@@ -19,3 +19,17 @@ APP_SECRET=3287ab29d011507c97e56147a33d3e97
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
+
+###> docker-compose ###
+MYSQL_ROOT_PASSWORD=password
+NGINX_PORT=80
+ADMINER_PORT=8080
+LOCAL_USER=1000:1000
+###< docker-compose ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# Configure your db driver and server_version in config/packages/doctrine.yaml
+DATABASE_URL=mysql://root:password@127.0.0.1:3310/serve-community
+###< doctrine/doctrine-bundle ###
